# Beekeeper

./: .gitignore  CMakeLists.txt  Makefile  board.c  board.h  list.c  list.h  main.c  moves.c  moves.h  node.c  node.h  pn_tree.c  pn_tree.h  pns.c  pns.h  process_timing.py
c/: CMakeLists.txt  build.sh  main.c  main.cpp  perft.c  puzzles.c  puzzles.h  readme.md  test.bat  test.sh  text.c
c/engine/: board.c  board.cpp  board.h  board.hpp  list.c  list.cpp  list.h  list.hpp  moves.c  moves.cpp  moves.h  moves.hpp  node.c  node.cpp  node.h  node.hpp  tt.c  tt.h  utils.c  utils.h
c/mcts/: mcts.c  mcts.h
c/mm/: evaluation.c  evaluation.cpp  evaluation.h  evaluation.hpp  mm.c  mm.cpp  mm.h  mm.hpp
c/pns/: pn_tree.c  pn_tree.cpp  pn_tree.h  pn_tree.hpp  pns.c  pns.cpp  pns.h  pns.hpp
c/timing/: timing.c  timing.h
cpp/: CMakeLists.txt  main.cpp  perft.cpp  setup.py
cpp/engine/: board.cpp  board.h  constants.h  game.cpp  game.h  move.cpp  move.h  position.h  tree.cpp  tree.h  tree_impl.cpp  tt.cpp  tt.h  utils.cpp  utils.h
cpp/ml/: ai_mcts.cpp  ai_mcts.h
mm/: mm.c  mm.h
pns/: pn_tree.c  pn_tree.h  pns.c  pns.h
python/: batch.job  data.store  entomology_to_hive.py  histo_vs_random.py  parameter_estimation.py  requirements.txt  test.py  tournament.py
python/package/: MCTS.py  convert_onnx.py  hive.py  hive_dataset.py  hive_nn.py  main.py  model_performance.py  mpi_packet.py  mygym.py  requirements.txt  setup.py  simulator.py  train.py  utils.py
python/package/games/: Game.py  __init__.py  utils.py
python/package/games/connect4/: connect4.py  connect4_nn.py
python/package/games/hive/: hive.py  hive_dataset.py  hive_nn.py
python/package/games/tictactoe/: tictactoe.py  tictactoe_nn.py
python/package/tests/: bla.py  test_connect4.py  test_mcts.py  test_simulator.py  test_trainer.py
